Update librerias de uso.html

--- a/librerias de uso.html
+++ b/librerias de uso.html
@@ -440,5 +440,6 @@
     <script src="js/liv.js"></script> 
    <script src="js/main.js"></script> 
    <script src="js/bootstrap.min.js"></script>
+    <script src="js/paoo.js"></script>
 </body>
 </html>
